# Crews

./: requirements.txt
singularity_0/: .env  README.md  pyproject.toml  report.md
singularity_0/src/singularity_0/: crew.py  main.py
singularity_0/src/singularity_0/config/: agents.yaml  tasks.yaml
singularity_0/src/singularity_0/tools/: custom_tool.py
