[project]
name = "singularity_0"
version = "0.1.0"
description = "singularity-0 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
singularity_0 = "singularity_0.main:run"
run_crew = "singularity_0.main:run"
train = "singularity_0.main:train"
replay = "singularity_0.main:replay"
test = "singularity_0.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
